--- a/Thesis on NLP.ipynb
+++ b/Thesis on NLP.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "id": "d60cf972",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-12T17:55:27.265737Z",
+     "start_time": "2022-10-12T17:55:26.219911Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -18,9 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "id": "534bc3be",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-12T17:55:27.308789Z",
+     "start_time": "2022-10-12T17:55:27.273488Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('labeled_data.csv')\n",
@@ -39,9 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "id": "bf88f08d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-12T17:55:29.307223Z",
+     "start_time": "2022-10-12T17:55:29.296323Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -144,7 +159,7 @@
        "4     !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you hear about me might be true or it might be faker than the bitch who told it to ya &#57361;  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
