--- a/Text_Classification.ipynb
+++ b/Text_Classification.ipynb
@@ -6,8 +6,8 @@
    "id": "ef76748f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.232890Z",
-     "start_time": "2022-09-21T16:32:51.905520Z"
+     "end_time": "2022-10-09T12:22:35.593871Z",
+     "start_time": "2022-10-09T12:22:35.061719Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "id": "c3882c3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.732788Z",
-     "start_time": "2022-09-21T16:32:52.236494Z"
+     "end_time": "2022-10-09T12:22:36.865086Z",
+     "start_time": "2022-10-09T12:22:35.596225Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "id": "d1fc9465",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.746519Z",
-     "start_time": "2022-09-21T16:32:52.734569Z"
+     "end_time": "2022-10-09T12:22:37.043575Z",
+     "start_time": "2022-10-09T12:22:36.866636Z"
     },
     "scrolled": true
    },
@@ -132,8 +132,8 @@
    "id": "440bef61",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.752105Z",
-     "start_time": "2022-09-21T16:32:52.747897Z"
+     "end_time": "2022-10-09T12:22:37.072577Z",
+     "start_time": "2022-10-09T12:22:37.050215Z"
     },
     "scrolled": true
    },
@@ -159,8 +159,8 @@
    "id": "6f9b9a1a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.759702Z",
-     "start_time": "2022-09-21T16:32:52.753554Z"
+     "end_time": "2022-10-09T12:22:37.087657Z",
+     "start_time": "2022-10-09T12:22:37.077613Z"
     }
    },
    "outputs": [
@@ -187,8 +187,8 @@
    "id": "c4c3d274",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.771702Z",
-     "start_time": "2022-09-21T16:32:52.761229Z"
+     "end_time": "2022-10-09T12:22:37.103458Z",
+     "start_time": "2022-10-09T12:22:37.091071Z"
     }
    },
    "outputs": [
@@ -215,8 +215,8 @@
    "id": "a3c0799b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.780928Z",
-     "start_time": "2022-09-21T16:32:52.773222Z"
+     "end_time": "2022-10-09T12:22:37.126428Z",
+     "start_time": "2022-10-09T12:22:37.105116Z"
     }
    },
    "outputs": [
@@ -243,8 +243,8 @@
    "id": "14f00f6f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.818335Z",
-     "start_time": "2022-09-21T16:32:52.783256Z"
+     "end_time": "2022-10-09T12:22:37.181920Z",
+     "start_time": "2022-10-09T12:22:37.128315Z"
     }
    },
    "outputs": [
@@ -269,8 +269,8 @@
    "id": "3e2d7112",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.913637Z",
-     "start_time": "2022-09-21T16:32:52.820478Z"
+     "end_time": "2022-10-09T12:22:37.280973Z",
+     "start_time": "2022-10-09T12:22:37.184705Z"
     }
    },
    "outputs": [
@@ -278,7 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_448389/3006716147.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_818909/3006716147.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -296,8 +296,8 @@
    "id": "b0afcfb4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.945205Z",
-     "start_time": "2022-09-21T16:32:52.914899Z"
+     "end_time": "2022-10-09T12:22:37.313328Z",
+     "start_time": "2022-10-09T12:22:37.282459Z"
     }
    },
    "outputs": [
@@ -322,8 +322,8 @@
    "id": "3f92f4dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.948174Z",
-     "start_time": "2022-09-21T16:32:52.946372Z"
+     "end_time": "2022-10-09T12:22:37.316917Z",
+     "start_time": "2022-10-09T12:22:37.314725Z"
     }
    },
    "outputs": [],
@@ -340,8 +340,8 @@
    "id": "17390c3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.951840Z",
-     "start_time": "2022-09-21T16:32:52.949390Z"
+     "end_time": "2022-10-09T12:22:37.320255Z",
+     "start_time": "2022-10-09T12:22:37.317996Z"
     }
    },
    "outputs": [],
@@ -358,8 +358,8 @@
    "id": "dede892d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:52.997144Z",
-     "start_time": "2022-09-21T16:32:52.953104Z"
+     "end_time": "2022-10-09T12:22:37.365138Z",
+     "start_time": "2022-10-09T12:22:37.321364Z"
     }
    },
    "outputs": [
@@ -367,7 +367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_448389/3178050215.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_818909/3178050215.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -386,8 +386,8 @@
    "id": "66de7503",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:53.005677Z",
-     "start_time": "2022-09-21T16:32:52.998306Z"
+     "end_time": "2022-10-09T12:22:37.371545Z",
+     "start_time": "2022-10-09T12:22:37.366259Z"
     },
     "scrolled": true
    },
@@ -478,8 +478,8 @@
    "id": "962204fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:53.035419Z",
-     "start_time": "2022-09-21T16:32:53.007472Z"
+     "end_time": "2022-10-09T12:22:37.397832Z",
+     "start_time": "2022-10-09T12:22:37.372676Z"
     }
    },
    "outputs": [
@@ -487,7 +487,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_448389/740760900.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_818909/740760900.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -506,8 +506,8 @@
    "id": "785ed64c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.061182Z",
-     "start_time": "2022-09-21T16:32:53.037453Z"
+     "end_time": "2022-10-09T12:22:41.501493Z",
+     "start_time": "2022-10-09T12:22:37.398876Z"
     }
    },
    "outputs": [
@@ -515,7 +515,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_448389/4184252231.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_818909/4184252231.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -536,8 +536,8 @@
    "id": "e9f2a7a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.069654Z",
-     "start_time": "2022-09-21T16:32:57.062765Z"
+     "end_time": "2022-10-09T12:22:41.509406Z",
+     "start_time": "2022-10-09T12:22:41.502680Z"
     }
    },
    "outputs": [
@@ -635,8 +635,8 @@
    "id": "150bc4a6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.078786Z",
-     "start_time": "2022-09-21T16:32:57.071945Z"
+     "end_time": "2022-10-09T12:22:41.518320Z",
+     "start_time": "2022-10-09T12:22:41.511769Z"
     }
    },
    "outputs": [],
@@ -651,8 +651,8 @@
    "id": "7c8e5a9b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.088862Z",
-     "start_time": "2022-09-21T16:32:57.080533Z"
+     "end_time": "2022-10-09T12:22:41.527790Z",
+     "start_time": "2022-10-09T12:22:41.520255Z"
     }
    },
    "outputs": [
@@ -762,8 +762,8 @@
    "id": "bb190cce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.102058Z",
-     "start_time": "2022-09-21T16:32:57.092089Z"
+     "end_time": "2022-10-09T12:22:41.534268Z",
+     "start_time": "2022-10-09T12:22:41.529387Z"
     }
    },
    "outputs": [
@@ -807,8 +807,8 @@
    "id": "9e11d645",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.109966Z",
-     "start_time": "2022-09-21T16:32:57.104643Z"
+     "end_time": "2022-10-09T12:22:41.540561Z",
+     "start_time": "2022-10-09T12:22:41.536138Z"
     }
    },
    "outputs": [],
@@ -824,8 +824,8 @@
    "id": "b9dfd556",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.115904Z",
-     "start_time": "2022-09-21T16:32:57.111467Z"
+     "end_time": "2022-10-09T12:22:41.547180Z",
+     "start_time": "2022-10-09T12:22:41.542616Z"
     }
    },
    "outputs": [
@@ -850,8 +850,8 @@
    "id": "f92387e5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.122787Z",
-     "start_time": "2022-09-21T16:32:57.118092Z"
+     "end_time": "2022-10-09T12:22:41.554093Z",
+     "start_time": "2022-10-09T12:22:41.548720Z"
     }
    },
    "outputs": [],
@@ -866,8 +866,8 @@
    "id": "607bd3cf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.126839Z",
-     "start_time": "2022-09-21T16:32:57.123877Z"
+     "end_time": "2022-10-09T12:22:41.559104Z",
+     "start_time": "2022-10-09T12:22:41.555524Z"
     }
    },
    "outputs": [
@@ -892,8 +892,8 @@
    "id": "dd8086f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:57.130361Z",
-     "start_time": "2022-09-21T16:32:57.128262Z"
+     "end_time": "2022-10-09T12:22:41.564145Z",
+     "start_time": "2022-10-09T12:22:41.561209Z"
     }
    },
    "outputs": [],
@@ -909,14 +909,14 @@
    "id": "ad101e40",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:58.503237Z",
-     "start_time": "2022-09-21T16:32:57.135915Z"
+     "end_time": "2022-10-09T12:22:42.870316Z",
+     "start_time": "2022-10-09T12:22:41.565863Z"
     }
    },
    "outputs": [],
    "source": [
     "x_train_bow = cv.fit_transform(x_train['review']).toarray()\n",
-    "x_test_bow = cv.fit_transform(x_test['review']).toarray() "
+    "x_test_bow = cv.transform(x_test['review']).toarray() "
    ]
   },
   {
@@ -925,8 +925,8 @@
    "id": "7e602ef7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:32:58.507690Z",
-     "start_time": "2022-09-21T16:32:58.504445Z"
+     "end_time": "2022-10-09T12:22:42.877600Z",
+     "start_time": "2022-10-09T12:22:42.874921Z"
     }
    },
    "outputs": [
@@ -947,25 +947,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "51904019",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-09-21T16:36:48.852271Z",
-     "start_time": "2022-09-21T16:36:48.088939Z"
+     "end_time": "2022-10-09T12:22:47.870423Z",
+     "start_time": "2022-10-09T12:22:42.878663Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x_train_bow' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnaive_bayes\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GaussianNB\n\u001b[1;32m      2\u001b[0m gnb \u001b[38;5;241m=\u001b[39m GaussianNB()\n\u001b[0;32m----> 4\u001b[0m gnb\u001b[38;5;241m.\u001b[39mfit(\u001b[43mx_train_bow\u001b[49m, y_train)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x_train_bow' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "GaussianNB()"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -977,13 +976,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "81bc71ff",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:22:47.875414Z",
+     "start_time": "2022-10-09T12:22:47.871850Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1997, 48282)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test_bow.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "38535655",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:22:48.792897Z",
+     "start_time": "2022-10-09T12:22:47.878483Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# y_pred = gnb.predict(x_test_bow)"
+    "y_pred = gnb.predict(x_test_bow)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "df5c3094",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:22:48.798384Z",
+     "start_time": "2022-10-09T12:22:48.794011Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6324486730095142"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "71c41a1e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:24:08.063292Z",
+     "start_time": "2022-10-09T12:24:08.045578Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[717, 235],\n",
+       "       [499, 546]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a737a7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e3835dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "434d395e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:28:33.506130Z",
+     "start_time": "2022-10-09T12:27:16.461298Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8447671507260891"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "rf.fit(x_train_bow, y_train)\n",
+    "y_pred = rf.predict(x_test_bow)\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6c30ef9c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:30:02.648958Z",
+     "start_time": "2022-10-09T12:29:53.457816Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8307461191787682"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv = CountVectorizer(max_features=3000)\n",
+    "\n",
+    "x_train_bow = cv.fit_transform(x_train['review']).toarray()\n",
+    "x_test_bow = cv.transform(x_test['review']).toarray() \n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "rf.fit(x_train_bow, y_train)\n",
+    "y_pred = rf.predict(x_test_bow)\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae4aec05",
+   "metadata": {},
+   "source": [
+    "### N-grams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "495237b4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:33:36.968756Z",
+     "start_time": "2022-10-09T12:33:13.656606Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8477716574862293"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv = CountVectorizer(ngram_range=(1,3), max_features=5000)\n",
+    "\n",
+    "x_train_bow = cv.fit_transform(x_train['review']).toarray()\n",
+    "x_test_bow = cv.transform(x_test['review']).toarray() \n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "rf.fit(x_train_bow, y_train)\n",
+    "y_pred = rf.predict(x_test_bow)\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4978390b",
+   "metadata": {},
+   "source": [
+    "### TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b13711ab",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:34:50.143368Z",
+     "start_time": "2022-10-09T12:34:50.140754Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tfidf = TfidfVectorizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e96ac540",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:36:15.585672Z",
+     "start_time": "2022-10-09T12:35:52.151327Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8432648973460191"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_tfidf = cv.fit_transform(x_train['review']).toarray()\n",
+    "x_test_tfidf = cv.transform(x_test['review']).toarray() \n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "rf.fit(x_train_tfidf, y_train)\n",
+    "y_pred = rf.predict(x_test_tfidf)\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bde54fc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-10-09T12:38:56.216948Z",
+     "start_time": "2022-10-09T12:38:56.213207Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "081b7e3f",
+   "metadata": {},
+   "source": [
+    "### Word2Vec (average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e52c812",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
